--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -25,10 +25,14 @@
   font-size: 20px;
   font-weight: bold;
   color: white;
+  cursor: pointer;
 }
 
 header{
-  background-color: #f5dcca;
+  background-color: #faece2;
+  background: url("../images/developer.png"), url("../images/header_bg.png"), #faece2;
+  background-position: top left, bottom right;
+  background-repeat: no-repeat;
   padding-top: 50px;
 }
 
@@ -56,4 +60,44 @@ nav .menu a{
   color: #474747;
   text-decoration: none;
 
+}
+
+#banner .banner-content{
+  max-width: 585px;
+}
+
+#banner {
+  /* border: 1px solid red; */
+  margin: 47px 38px 0 230px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  
+}
+
+#banner .banner-content h2 {
+  font-size: 45px;
+  font-weight: 600;
+  color: #474747;
+  margin: 5px;
+}
+
+#banner .banner-content h1{
+  font-size: 85px;
+  font-weight: bold;
+  color: #181818;
+  margin-bottom: 20px;
+
+}
+
+#banner .banner-content p{
+  font-size: 18px;
+  color: #757575;
+  line-height: 30px;
+  margin-bottom: 30px;
+}
+
+#banner .banner-image img{
+  max-width: 585px;
+  vertical-align:middle;
 }
