Edited some items

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -28,6 +28,31 @@
   cursor: pointer;
 }
 
+.section-heading{
+  max-width: 827px;
+  text-align: center;
+}
+
+.section-heading h2{
+  font-size: 35px;
+  margin-bottom: 30px;
+}
+
+.section-heading p{
+  font-size: 18px;
+  margin-bottom: 30px;
+  line-height: 30px;
+  color: #757575;
+
+}
+
+#about .about-container .about-info{
+  display: flex;
+  justify-content: space-around;
+
+}
+
+
 header{
   background-color: #faece2;
   background: url("../images/developer.png"), url("../images/header_bg.png"), #faece2;
@@ -100,4 +125,32 @@ nav .menu a{
 #banner .banner-image img{
   max-width: 585px;
   vertical-align:middle;
+}
+
+#about{
+  padding-top: 130px;
+
+}
+
+#about .about-container{
+  width: 71%;
+  max-width: 1140px;
+  margin: 0 auto;
+  text-align: center;
+  background-color: #f9e9de;
+  padding: 131px 156px;
+
+}
+
+.about-info .info-card p{
+font-size: 20px;
+margin-bottom: 30px;
+line-height: 30px;
+color: #757575;
+
+
+}
+
+.info-card h4{
+  font-size: 20px;
 }
