--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -31,11 +31,14 @@
 .section-heading{
   max-width: 827px;
   text-align: center;
+  margin: 0 auto;
+
 }
 
 .section-heading h2{
   font-size: 35px;
   margin-bottom: 30px;
+
 }
 
 .section-heading p{
@@ -43,6 +46,7 @@
   margin-bottom: 30px;
   line-height: 30px;
   color: #757575;
+
 
 }
 
@@ -153,4 +157,47 @@ color: #757575;
 
 .info-card h4{
   font-size: 20px;
+}
+
+.skills{
+  padding-top: 130px;
+}
+
+.skills-container{
+  width: 71%;
+  max-width: 1140px;
+  margin: 0 auto;
+
+}
+
+.skill-box{
+  display: flex;
+  gap: 24px;
+  
+}
+
+.skill-card {
+  padding: 30px;
+  max-width: 267;
+  box-shadow: 0 6px 50px 0 #00000038;
+
+}
+.skill-card img{
+  width: 44px;
+  margin-bottom: 30px;
+
+}
+
+.skill-card h3{
+  font-size: 20px;
+  color: #181818;
+  margin-bottom: 20px;
+
+}
+
+.skill-card p{
+  font-size: 16px;
+  line-height: 28px;
+  color: #757575;
+
 }
