--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -55,9 +55,10 @@
 header{
   background-color: #faece2;
   background: url("../images/developer.png"), url("../images/header_bg.png"), #faece2;
-  background-position: top left, bottom right;
+  background-position: 23px 38px, bottom right;
   background-repeat: no-repeat;
   padding-top: 50px;
+
 }
 
 nav{
@@ -242,8 +243,60 @@ color: #757575;
   color: #757575;
 }
 
+.rockstar{
+  text-align: center;
+  padding-top: 50px;
+}
+
 hr{
   margin: 30px 0;
 }
+
+footer{
+  margin-top: 130px;
+  background-color: #FFF8F3;
+  padding: 130px 0;
+}
+
+.footer-container{
+  width: 71%;
+  max-width: 1140px;
+  margin: 0 auto;
+  display: flex;
+  gap: 116px;
+}
+
+.footer-container .social{
+  max-width: 562px;
+}
+
+.footer-container h2{
+  color: #181818;
+  font-size: 35px;
+  margin-bottom: 20px;
+}
+
+.social p{
+  color: #474747;
+  line-height: 28px;
+  padding-bottom: 30px;
+}
+
+.icons a{
+  margin-right: 24px;
+}
+form input[type="text"], textarea {
+  width: 461px;
+  padding: 18px 31px;
+  margin-bottom: 24px;
+  border: none;
+  border-radius: 5px;
+  color:#757575;
+}
+
+
+
+
+
 
 
